<resources>
    <string name="app_name">SWEv2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button">CONTINUE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">SIGN IN</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="country_prompt" />
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="profile">Your profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookings">Bookings</string>
    <string name="discount">Discounts</string>
    <string name="price">Price alert</string>
    <string name="checkin">Check-in</string>
    <string name="findbookings">Find bookings</string>
    <string name="pass">Pass</string>
    <string name="tickets">Boarding card</string>
    <string name="bookflights">Book flights</string>
    <string name="myflights">My flights</string>
    <string name="leaving">Leaving from</string>
    <string name="going">Going to</string>
    <string name="departure">Departure</string>
    <string name="choosedeparture">Choose departure date</string>
    <string name="comeback">Return</string>
    <string name="choosereturn">Choose return date</string>
    <string name="passengers">Passengers</string>
    <string name="flightclass">Flight class</string>
    <string name="adult">Adults</string>
    <string name="child">Child</string>
    <string name="infant">Infant</string>
    <string name="search">SEARCH FLIGHTS</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="done">DONE</string>
    <string name="add">Add passengers</string>
    <string name="choseclass">Choose class</string>
    <string name="economy">Economy class</string>
    <string name="business">Business class</string>
    <string name="firstclass">First class</string>
    <string name="dashboard">Dashboard</string>
    <string name="passengerlastname">Passenger\'s last name</string>
    <string name="confirmationcode">Confirmation code</string>
    <string name="destination">Destinations</string>
    <string name="choosebaggage">Choose baggage</string>
    <string name="handluggage">Hand luggage</string>
    <string name="luggage10">Luggage up to 10KG</string>
    <string name="luggage24">Luggage up to 24KG</string>
    <string name="boardpass">BOARDING PASS</string>
    <string name="passengername">Passenger name :</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="gate">Gate :</string>
    <string name="seat">Seat :</string>
    <string name="flight">Flight :</string>
    <string name="boardingtime">Boarding time :</string>
    <string name="date">Date :</string>
    <string name="searchdest">Search destinations</string>
    <string name="avalaible">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="selected">Selected</string>
    <string name="chooseseat">Select seat</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="nationality">Nationality</string>
    <string name="document">Document number</string>
    <string name="user">User details</string>
    <string name="documentinfo">Document details</string>
    <string name="flightinfo">Flight Details</string>
    <string name="buyticket">BUY TICKET</string>
    <string name="manage">Manage your booking</string>
    <string name="homebooking">Travel insurance | Priority | Transfer to and from airport | More</string>
    <string name="managepass">Manage your ticket</string>
    <string name="hometicket">Overview of purchased tickets</string>
    <string name="boarding">Boarding</string>
    <string name="baggage">Baggage</string>
    <string name="documentn0">ADD DOCUMENT NUMBER</string>
    <string name="confirm">CONFIRM</string>
    <string name="wabat">WABAT</string>
    <string name="home">Home</string>
    <string name="flights">Flights</string>
    <string name="sign_up">SIGN UP</string>
    <string name="dialog">Congratulations! You have successfully checked-in.</string>
    <string name="paynow">PAY NOW</string>
    <string name="payinfo">Add you payment information</string>
    <string name="cardinfo">Card information</string>
    <string name="passport">Passport number</string>
    <string name="bookinginfo">Booking information</string>
    <string name="bookingcardinfo">Card info:</string>
    <string name="bookingprice">Price:</string>
    <string name="transaction">Transaction number:</string>
    <string name="Howitallstarted">How It All Started</string>
    <string name="HowitallstartedText">It all started with a simple idea: to make air travel accessible to everyone and to create a seamless and unforgettable experience for all passengers. The founders of WABAT knew that traveling by air had the power to transform lives, bridging distances and opening doors to new horizons. They wanted to bring this transformative experience to as many people as possible.</string>
    <string name="OurWayOfBusinessText">
At WABAT, our way of doing business is centered around one core principle: putting the customer at the heart of everything we do. We believe that every journey should be a delightful and hassle-free experience, from the moment our customers start planning their trip until they reach their destination.</string>
    <string name="OurWayOfBusiness">Our Way Of Business</string>
    <string name="WhereDoWeFly">Where Do We Fly</string>
    <string name="WhereDoWeFlyText">At WABAT, we take pride in offering an extensive network of destinations, connecting our customers to the farthest corners of the globe. We believe in making the world more accessible, allowing travelers to explore diverse cultures, breathtaking landscapes, and vibrant cities. Here are just a few of the amazing destinations we fly to: Dreamy Beach Paradises, European Charms, African Safari Adventures, Asian Marvels and much more.</string>
    <string name="copyright">"All rights reserved "</string>
</resources>