<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".ui.others.Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layoutbackground"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/E_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail address"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:inputType="textEmailAddress"
            android:background="@drawable/bookingedit"
            android:textSize="20dp"
            android:drawablePadding="5dp"
            android:padding="15dp"/>
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/baseline_security_24"
            android:inputType="textPassword"
            android:background="@drawable/bookingedit"
            android:textSize="20dp"
            android:drawablePadding="5dp"
            android:padding="15dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:background="@drawable/silverbtn"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/login" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account_yet"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="30dp"
        android:textSize="17dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/silverbtn"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>