<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".ui.others.Register">

    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="First name"
        android:layout_margin="10dp"
        android:inputType="text"
        android:background="@drawable/editable"
        android:textSize="20dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Last name"
        android:layout_margin="10dp"
        android:inputType="text"
        android:background="@drawable/editable"
        android:textSize="20dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/date_of_birth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passport"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Passport number"
        android:layout_margin="10dp"
        android:inputType="text"
        android:background="@drawable/editable"
        android:textSize="20dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone number"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:background="@drawable/editable"
        android:textSize="20dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/e_mail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="E-mail"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/editable"
        android:textSize="20dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:background="@drawable/editable"
        android:textSize="20dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:background="@drawable/silverbtn"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="Register" />

</LinearLayout>