<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.others.FlightClassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layoutbackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/noun_economy_class_2729965" />

            <TextView
                android:id="@+id/economy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/economy"
                android:textSize="18dp" />


            <Button
                android:id="@+id/chooseclass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginLeft="70dp"
                android:text="@string/choseclass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/noun_business_class_4282952" />

            <TextView
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/business"
                android:textSize="18dp" />


            <Button
                android:id="@+id/chooseclass2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginLeft="70dp"
                android:text="@string/choseclass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/noun_first_class_2729958" />

            <TextView
                android:id="@+id/firstclass"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/firstclass"
                android:textSize="18dp" />


            <Button
                android:id="@+id/chooseclass3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginLeft="105dp"
                android:text="@string/choseclass" />

        </LinearLayout>

        <Button
            android:id="@+id/classdone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/done" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>